--- a/Topological data analysis - project r code.Rmd
+++ b/Topological data analysis - project r code.Rmd
@@ -9,8 +9,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-1. Packages:
-
+1.  Packages:
 
 ```{r}
 #1. Install required packages if not already installed
@@ -35,8 +34,7 @@ Seed:
 set.seed(12345)
 ```
 
-
-2. Data:
+2.  Data:
 
 ```{r}
 # 2. Load Data
@@ -61,9 +59,7 @@ travel_month <- travel %>%
 colnames(travel_month) <- c("country", "Code", "date", "Travel_code")
 ```
 
-
-3. Clean and merge:
-
+3.  Clean and merge:
 
 ```{r}
 
@@ -82,6 +78,8 @@ data <- covid_month %>%
             total_daily_cases_per_million = new_cases_per_million
   ) %>%
   drop_na()
+
+#Creating the cumulative cases variable
 
 data <- data %>%
   group_by(country) %>%
@@ -124,8 +122,7 @@ country_clean <- data_clean %>%
 
 ```
 
-
-4. Single Ball mapper:
+4.  Single Ball mapper:
 
 ```{r}
 
@@ -186,12 +183,12 @@ country_clean[bm$points_covered_by_landmarks[[2]], ]
 
 ```
 
-
 Summary for single ball mapper:
 
-
 ```{r}
-#5. Summary table for the different balls in the plot for comparison
+#Summary table for the different balls in the plot for comparison
+
+#Assigning each country their corresponding ball id according to the ball mapper above
 
 ball_assign <- rep(NA_integer_, nrow(country_clean))
 
@@ -236,8 +233,7 @@ countries_in_balls
 
 ```
 
-
-5. Plotting the evolution of average cases per ball (for chosen interesting balls)
+5.  Plotting the evolution of average cases per ball (for chosen interesting balls):
 
 ```{r}
 
@@ -308,10 +304,7 @@ ggplot(ball_ts_chosen,
 
 ```
 
-
-
-
-6. Ball mapper for each week
+6.  Ball mapper for each week:
 
 ```{r}
 
@@ -327,11 +320,19 @@ weekly_dates <- as.Date(weekly_dates)
 
 weekly_dates
 
+#Computing the global maximum of cumulative cases for the function below
+
+global_max_cases <- max(
+  data_clean$cumulative_cases_pm,
+  na.rm = TRUE
+)
+
+
 #Function for creating the plots for each day
 
 bm_weekly_function <- function(the_date, epsilon = 0.4) {
 
-  # 6.1 - snapshot for that day:
+  # 6.1 - snapshot for that day
   snapshot <- data_clean %>%
     filter(date == the_date) %>%
     drop_na(
@@ -343,39 +344,39 @@ bm_weekly_function <- function(the_date, epsilon = 0.4) {
       cumulative_cases_pm
     )
 
-  # 6.2 - point cloud (X) and colouring (y)
-  X <- snapshot %>%
-    select(
-      pop_dens,
-      median_age,
-      gdp_per_capita,
-      hospital_beds_per_thousand,
-      Travel_code
-    ) %>%
-    as.data.frame()
+  if (nrow(snapshot) == 0) {
+    message("No data for date: ", the_date) #Letting us know if there are any NAs for the date
+    return(NULL)
+  }
+  
 
-  y <- data.frame(snapshot$cumulative_cases_pm)
-  colnames(y) <- "cumulative_cases_pm"
+  #6.2 y as proportion of total cumulative cases in this snapshot
+  total_cases <- sum(snapshot$cumulative_cases_pm, na.rm = TRUE)
+  y_prop <- snapshot$cumulative_cases_pm / total_cases
 
-  # 6.3 - normalize X
-  X_norm <- BallMapper::normalize_to_min_0_max_1(X)
+  y <- data.frame(y_prop)
+  colnames(y) <- "prop_cum_cases"
 
-  # 6.4 - run Ball Mapper
+  # 6.3 - run Ball Mapper using X_norm from the first ball mapper
   bm <- BallMapper::BallMapper(
     points  = X_norm,
     values  = y,
     epsilon = epsilon
   )
 
-  # 6.5 - plot
+  #check date and for any NAs
+  print(the_date)
+  print(any(!is.finite(bm$coloring)))
+
+  # 6.4 - plot
   ColorIgraphPlot(
     bm,
     showLegend = TRUE,
-    seed_for_plotting = 123
+    seed_for_plotting = 123,
+    maximal_color_scale = 1   # proportions in [0,1]
   )
-  
-  # 6.6 - Title
-  
+
+  # 6.5 - Title
   title(
     main = paste(
       "Ball Mapper –",
@@ -385,6 +386,7 @@ bm_weekly_function <- function(the_date, epsilon = 0.4) {
 
   return(bm)
 }
+
 
 #Run for each week
 
@@ -399,47 +401,67 @@ bm_22jan <- bm_weekly_function(weekly_dates[4]) #22nd January
 bm_29jan <- bm_weekly_function(weekly_dates[5]) #29th January
 
 
-
+#Not sure why there are warnings on the plot for the 15th of January. I checked the colouring vector and there are no missing values
 
 
 ```
 
 
-7. Colouring the ball mapper by each variable, overall between 1st January and 1st February
+7.  Colouring the ball mapper by each variable, overall between 1st January and 1st February:
 
 ```{r}
 
-#7 - colouring by each variable - function
-
 color_bm_by_var <- function(bm, data_day, var_name, main_title = NULL) {
-  # compute mean of variable inside each ball
+  
+  #If colouring by cumulative cases, we just colour using the original colouring from when the ball mapper plot was built (part 4)
+  if (var_name == "cumulative_cases_pm") {
+
+    bm2 <- bm}
+  
+  else{
+  # 7.1 - compute mean of variable inside each ball
   col_vec <- sapply(bm$points_covered_by_landmarks, function(idx) {
     mean(data_day[[var_name]][idx], na.rm = TRUE)
   })
-
-
-  bm2 <- bm
-  bm2$coloring <- col_vec
   
-
+  #special handling only for population density (because Singapore skews the scale so much)
+  if (var_name == "pop_dens") {
+    
+    # log-transform the ball means
+    col_vec <- log10(col_vec + 1)          # +1 to avoid log(0)
+    
+    # cap extreme values (e.g. Singapore) at 99th percentile on this log scale
+    cap <- quantile(col_vec, 0.99, na.rm = TRUE)
+    col_vec[col_vec > cap] <- cap
+  }
+  
+  
+  # 7.2 - Applying the colouring vector to the overall ball mapper plot
+  bm2 <- bm
+  bm2$coloring <- col_vec}
+  
+  
+  #7.3 - plotting
   ColorIgraphPlot(
     bm2,
     showLegend        = TRUE,
     seed_for_plotting = 123
   )
-
+  
+  # 7.4 - Titling
   if (is.null(main_title)) {
-    main_title <- paste("Ball Mapper –", the_day, "–", var_name)
+    main_title <- paste("Ball Mapper –", var_name)
   }
   title(main_title)
 }
 
 
 
+
 ```
 
 ```{r}
-#Calling the function
+#Calling the function for all our desired variables
 
 variables_to_color <- c(
   "cumulative_cases_pm",
@@ -460,4 +482,3 @@ for (v in variables_to_color) {
 }
 
 ```
-
